--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@babel/preset-env": "^7.26.9",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "date-fns": "^4.1.0",
     "eslint": "^9.23.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
