--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
     "date-fns": "^4.1.0",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^9.23.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
